<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uc_com_simple</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="cedric.strobel@stud.tu-darmstadt.de">cedric</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>utility</depend>
  <depend>geometry_msgs</depend>
  <depend>seonsor_msgs</depend>
  <depend>timer</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
